--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 				<label for="country">Country:</label>
 				<input id="country" type="search" name="country" placeholder="Enter country name" />
 				<button id="lookup">Lookup</button>
+				<button id="lookupCities">Lookup Cities</button>
 			</div>
 			
 			<div id="result">
 				<!-- countries will appear here -->
 			</div>
-		</main> 
+		</main>
 
 	</body>
 </html>
